--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,18 +1,18 @@
 ---
-// This is the main layout for the entire website
-// NOTE: Removed ViewTransitions import and usage
-
+// src/layouts/BaseLayout.astro
 import Header from "../components/nav.astro";
 import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 import "../styles/about-section.css";
-// NOTE: I removed the stray HTML <link> from the frontmatter
 
 interface Props {
     title: string;
 }
 
 const { title } = Astro.props;
+
+// Define BASE_PATH
+const BASE_PATH = import.meta.env.BASE_URL;
 ---
 
 <!doctype html>
@@ -22,7 +22,12 @@ const { title } = Astro.props;
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>{title} | Tharlam Academy</title>
 
-        <link rel="stylesheet" href="/fa/css/all.min.css" />
+        <link
+            href="https://unpkg.com/aos@2.3.4/dist/aos.css"
+            rel="stylesheet"
+        />
+
+        <link rel="stylesheet" href={`${BASE_PATH}fa/css/all.min.css`} />
     </head>
 
 
@@ -38,7 +43,17 @@ const { title } = Astro.props;
         <Footer />
 
         <script src="https://unpkg.com/aos@2.3.4/dist/aos.js" defer></script>
-        <script src="/scripts/i18n-switcher.js" defer></script>
-        <script src="/scripts/reinit.js" defer></script>
+
+        <script
+            src={`${BASE_PATH}scripts/i18n-switcher.js`}
+            defer
+            type="module"
+
+
+
+            ></script>
+
+        <script src={`${BASE_PATH}scripts/reinit.js`} defer type="module"
+        ></script>
     </body>
 </html>
