--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,11 @@ import Facilities from "../components/Facilities.astro";
 import SportsSection from "../components/SportsSection.astro";
 ---
 
-<BaseLayout title="Homepage">
+<BaseLayout
+  title="Home"
+  description="Tharlam Academy is a unique educational institution blending a modern curriculum with profound traditional Buddhist ethics and values to nurture mindful, successful global citizens."
+  ogImage="/Dezhung-Rinpoche"
+>
   <Banner />
   <AboutSection />
   <MissionVision />
