--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -23,7 +23,7 @@ const absoluteUrl = Astro.url.href;
 // The OG image is set to the provided 'ogImage', or falls back to '/Founder.png'
 const absoluteOgImage = ogImage
     ? new URL(ogImage, Astro.site).href
-    : new URL("/Dezhung-Rinpoche", Astro.site).href;
+    : new URL("/Dezhung-Rinpoche.PNG", Astro.site).href;
 ---
 
 <!doctype html>
