--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -24,7 +24,7 @@ const absoluteUrl = Astro.url.href;
 // This is used if the 'ogImage' prop is not passed from a specific page.
 const absoluteOgImage = ogImage
     ? new URL(ogImage, Astro.site).href
-    : new URL("/Diezhung-Rinpoche.PNG", Astro.site).href;
+    : new URL("/Dezhung-Rinpoche.png", Astro.site).href;
 ---
 
 <!doctype html>
