--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import SportsSection from "../components/SportsSection.astro";
 <BaseLayout
   title="Home"
   description="Tharlam Academy is a unique educational institution blending a modern curriculum with profound traditional Buddhist ethics and values to nurture mindful, successful global citizens."
-  ogImage="/Diezhung-Rinpoche.PNG"
+  ogImage="/Dezhung-Rinpoche.png"
 >
   <Banner />
   <AboutSection />
