--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,8 +11,8 @@ import SportsSection from "../components/SportsSection.astro";
 
 <BaseLayout
   title="Home"
-  description="Tharlam Academy is a unique educational institution blending a modern curriculum with profound traditional Buddhist ethics and values to nurture mindful, successful global citizens."
-  ogImage="/Dezhung-Rinpoche.png"
+  description="Your description here..."
+  ogImage="/dezhung-rinpoche.png"
 >
   <Banner />
   <AboutSection />
